--- a/antora/components/docs/modules/ROOT/pages/going-deeper/books.adoc
+++ b/antora/components/docs/modules/ROOT/pages/going-deeper/books.adoc
@@ -5,7 +5,7 @@
 
 
 
-Although it has evolved since, the _Apache Isis_ framework started out as an open source implementation of the naked objects pattern.
+Although it has evolved since, the _Apache Causeway_ framework started out as an open source implementation of the naked objects pattern.
 Indeed, the generic user interfaces provided by Apache Causeway xref:vw:ROOT:about.adoc[Wicket] viewer and the xref:vro:ROOT:about.adoc[Restful Objects] viewer are both "just" naked objects implementations; the first serves up a default generic representation of domain objects for human interaction, the latter serving up representation intended for machine consumption rather than human beings.
 
 If the idea of naked objects is of interest, then there are a couple of books on the topic that you might want to read.
