--- a/antora/components/docs/modules/support/pages/about.adoc
+++ b/antora/components/docs/modules/support/pages/about.adoc
@@ -21,5 +21,5 @@ If you think you've found a bug or want to raise an enhancement request, go to:
 Some other places that might be useful are:
 
 * link:https://cwiki.apache.org/confluence/display/CAUSEWAY/Index[ASF Wiki]
-* link:https://twitter.com/ApacheIsis[Twitter]
+* link:https://twitter.com/ApacheCauseway[Twitter]
 
